--- a/style.css
+++ b/style.css
@@ -1,21 +1,44 @@
 *,
 ::before,
-::after
-{
-box-sizing: border-box;
-/* border: 0.2px solid; */
+::after {
+  box-sizing: border-box;
+  /* border: 0.2px solid; */
 }
-body{
-    /* background-color: coral; */
-    margin: 0;
+
+body {
+  /* background-color: coral; */
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto",sans-serif;
+  font-size: 1rem;
+
 }
 
 /* nav bar */
 
-header{
-  font-family: "Shrikhand",cursive;
+header {
+  font-family: "Shrikhand", cursive;
   text-align: center;
   /* background-color:bisque; */
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);  
-padding: 0.3rem;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 0.3rem;
+  position: relative; 
 }
+
+main .localisation {
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 1rem;
+padding: 0.5rem;
+background-color: #f3f3f3;
+text-align: center;
+font-size: 0.7rem;
+
+
+}
+main .localisation i {
+    font-size: 1rem;
+}
+
+
