--- a/style.css
+++ b/style.css
@@ -1,44 +1,91 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
-  /* border: 0.2px solid; */
+    box-sizing: border-box;
+    /* border: 0.2px solid; */
 }
 
 body {
-  /* background-color: coral; */
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto",sans-serif;
-  font-size: 1rem;
+    /* background-color: coral; */
 
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+    font-size: 1rem;
 }
 
 /* nav bar */
 
 header {
-  font-family: "Shrikhand", cursive;
-  text-align: center;
-  /* background-color:bisque; */
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 0.3rem;
-  position: relative; 
+    font-family: "Shrikhand", cursive;
+    text-align: center;
+    /* background-color:bisque; */
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+    padding: 0.3rem;
+    position: relative;
 }
 
 main .localisation {
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 1rem;
-padding: 0.5rem;
-background-color: #f3f3f3;
-text-align: center;
-font-size: 0.7rem;
-
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 0.5rem;
+    background-color: #f3f3f3;
+    text-align: center;
+    font-size: 0.7rem;
 }
+
 main .localisation i {
     font-size: 1rem;
 }
 
+/* Section Information Reservation   */
 
+.reservation {
+    /* border: 0.2px solid blueviolet; */
+    text-align: center;
+}
+
+.reservation h2 {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+}
+
+.reservation p {
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.reservation button {
+    box-sizing: content-box;
+    background: var(--button-gradient,
+            linear-gradient(175deg, #9356dc 0%, #ff79da 100%));
+    width: 11.02rem;
+    height: 1.5rem;
+    padding: 0.813rem 1.172rem;
+    border-radius: 2rem;
+    margin-top: 1.688rem;
+    color: white;
+    border: 1px #9747ff;
+    transition: transform 400ms;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+    /* text layout  */
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    letter-spacing: 0em;
+    font-family: "Roboto" sans-serif;
+}
+
+.reservation button:hover {
+    transform: scale(1.02);
+    opacity: 0.7;
+}
+
+/* .gradient {
+    height: 50vh;
+    width: 50vw;
+    border: 1px solid blue;
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+} */
