--- a/sass/layout/_function.scss
+++ b/sass/layout/_function.scss
@@ -38,6 +38,7 @@
         }
 
         & .pin {
+            margin: 0;
             position: absolute;
             display: grid;
             color: white;
