--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import './sass/base';
+@import './sass/utils/colors';
 @import './sass/layout/header';
 
 /* nav bar */
@@ -10,3 +11,4 @@
 @import'./sass/layout/function';
 
 @import './sass/layout/menus';
+@import'./sass/layout/footer';
