--- a/sass/layout/_function.scss
+++ b/sass/layout/_function.scss
@@ -1,10 +1,10 @@
 @import "../utils/box-shadows";
 
 .function {
-    padding: 1rem 2rem;
+    padding: 4rem 2rem;
     background-color: #fff;
     & h2 { 
-        margin: 1rem 2rem 1rem ;
+        margin-bottom: 2rem ;
     }
     & ol {
         display: flex;
