--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -1,7 +1,7 @@
 .menu {
     display: flex;
     flex-direction: column;
-    background-color: #f6f6f6;
+    background-color: $bg_lgrey;
     padding: 3.375rem 1.125rem 4.125rem 1.0625rem;
     gap: 1.125rem;
 
@@ -22,16 +22,32 @@
             flex-direction: row;
         }
 
-        
-    } 
+
+    }
+
     .new {
-            border: 1px solid red;
-            position: relative;
-        }
+        // border: 1px solid red;
+        position: relative;
+    }
+
+    .new::before {
+        content: "Nouveau";
+        position: absolute;
+        height: 2rem;
+        width: 5rem;
+        background-color: $tertiary_3 ;
+        color: darken($tertiary_3, $amount: 50%);
+        display: grid;
+        place-items: center;
+        right: 1rem;
+        top: 1rem;
+        border-radius: 2px;
+
+    }
 
     .card {
         // box-sizing: border-box;
-        border: 1px solid rgb(245, 245, 245);
+        // border: 1px solid rgb(245, 245, 245);
         border-radius: 15px;
         height: 15.6875rem;
         width: 100%;
@@ -53,9 +69,21 @@
         }
 
         &__content {
-
+            position: relative;
             padding: 0.75rem 0.8125rem;
+            gap: 5px;
+            // background-color: brown;
+
+
         }
+
+        & i {
+            position: absolute;
+            font-size: 1.3125rem;
+            right: 1rem;
+            top: 30%;
+        }
+
     }
 
 }
