--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -72,8 +72,33 @@
             position: relative;
             padding: 0.75rem 0.8125rem;
             gap: 5px;
-            // background-color: brown;
 
+
+            // background-color: brown;
+            .fa-solid {
+                color: transparent;
+
+                background-image: linear-gradient($primary_1, $secondary_2);
+                background-clip: text;
+                -webkit-background-clip: text;
+                opacity: 0;
+                transition: all 2s ease-in-out;
+            }
+
+            &:hover .fa-solid {
+                opacity: 1;
+                transform: scale(1.09);
+            }
+
+            .fa-regular {
+                opacity: 1;
+                transition: all 1s ease-in-out;
+            }
+
+            &:hover .fa-regular {
+                opacity: 0;
+                transform: scale(0.7);
+            }
 
         }
 
