--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -1,6 +1,7 @@
 .menu {
     display: flex;
     flex-direction: column;
+    
     background-color: $bg_lgrey;
     padding: 3.375rem 1.125rem 4.125rem 1.0625rem;
     gap: 1.125rem;
@@ -13,13 +14,16 @@
     }
 
     &__card {
+        align-items: center;
         display: flex;
         flex-direction: column;
         gap: 1.125rem;
         width: 100%;
-
+min-width: 600px;
         @media (min-width: 768px) {
             flex-direction: row;
+            
+            
         }
 
 
