--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+// animation
+@import'./sass/components/loader';
 @import './sass/base';
 @import './sass/utils/colors';
 @import './sass/layout/header';
