--- a/sass/utils/_colors.scss
+++ b/sass/utils/_colors.scss
@@ -3,5 +3,5 @@ $bg_lgrey: #f6f6f6;
 $bg_drkgrey: #353535;
 
 $primary_1: #9356dc;
-$secondary_2: magenta;
+$secondary_2: #FF79DA ;
 $tertiary_3: #99E2D0;
