--- a/assets/style.css
+++ b/assets/style.css
@@ -127,8 +127,29 @@ header {
   text-align: center;
   /* background-color:bisque; */
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 0.3rem;
+  padding: 0.5rem 0rem;
   position: relative;
+  height: 7.3vh;
+}
+header .logoHead {
+  margin: 0;
+}
+header .header_logo {
+  display: flex;
+  text-align: center;
+  position: absolute;
+}
+header .back-to-index {
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 2rem;
+  transform: translateY(-50%);
+  font-size: 1.2rem;
 }
 
 /* nav bar */
@@ -136,11 +157,20 @@ main .localisation {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 5vh;
   gap: 1rem;
   padding: 0.5rem;
-  background-color: #f3f3f3;
+  background-color: #f6f6f6;
   text-align: center;
   font-size: 0.7rem;
+}
+main .localisation h2 {
+  font-family: "Roboto" sans-serif;
+  color: #353535;
+  font-weight: 500;
+}
+main .localisation i {
+  font-size: 1.01rem;
 }
 
 /* Section Information Reservation   */
@@ -183,9 +213,24 @@ main .localisation {
   opacity: 0.7;
 }
 
+.pan-function {
+  display: flex;
+  align-self: center;
+  flex-direction: column;
+  width: 100%;
+}
+
 .function {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
   padding: 4rem 2rem;
   background-color: #fff;
+}
+@media (min-width: 767px) {
+  .function {
+    padding: 4rem 10rem;
+  }
 }
 .function h2 {
   margin-bottom: 2rem;
@@ -210,10 +255,11 @@ main .localisation {
   padding: 1rem 2rem;
   flex-grow: 1;
   border-radius: 20px;
-  height: 3.5rem;
+  height: 4.5rem;
   box-shadow: 5px 5px 21px -4px rgba(0, 0, 0, 0.28);
   -webkit-box-shadow: 5px 5px 21px -4px rgba(0, 0, 0, 0.28);
   -moz-box-shadow: 5px 5px 21px -4px rgba(0, 0, 0, 0.28);
+  min-width: 12.8rem;
 }
 .function li i.fas {
   margin-right: 1rem;
@@ -229,7 +275,7 @@ main .localisation {
   flex-shrink: 0;
   place-items: center;
   border-radius: 50%;
-  bottom: 1rem;
+  align-self: center;
   left: -0.8rem;
 }
 
@@ -240,6 +286,12 @@ main .localisation {
   padding: 3.375rem 1.125rem 4.125rem 1.0625rem;
   gap: 1.125rem;
 }
+@media (min-width: 768px) {
+  .menu {
+    padding: 3.375rem 10rem 4.125rem 10rem;
+    gap: 3.125rem;
+  }
+}
 .menu h2 {
   margin-bottom: 1rem;
 }
@@ -249,11 +301,12 @@ main .localisation {
   flex-direction: column;
   gap: 1.125rem;
   width: 100%;
-  min-width: 600px;
+  min-width: 270px;
 }
 @media (min-width: 768px) {
   .menu__card {
     flex-direction: row;
+    gap: 6.25rem;
   }
 }
 .menu .new {
@@ -280,6 +333,7 @@ main .localisation {
   text-decoration: none;
   color: inherit;
   background-color: #ffffff;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
 }
 .menu .card__image {
   height: 70%;
@@ -298,23 +352,26 @@ main .localisation {
 }
 .menu .card__content .fa-solid {
   color: transparent;
-  background-image: linear-gradient(#9356dc, magenta);
+  background-image: linear-gradient(#9356dc, #FF79DA);
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
-  transition: all 2s ease-in-out;
+  transition: all 600ms ease-in-out;
+  transform: scale(0);
 }
 .menu .card__content:hover .fa-solid {
   opacity: 1;
-  transform: scale(1.09);
+  transform: scale(1.1);
+  rotate: 360deg;
 }
 .menu .card__content .fa-regular {
   opacity: 1;
-  transition: all 1s ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 .menu .card__content:hover .fa-regular {
   opacity: 0;
-  transform: scale(0.7);
+  transform: scale(1);
+  rotate: -360deg;
 }
 .menu .card i {
   position: absolute;
@@ -323,52 +380,84 @@ main .localisation {
   top: 30%;
 }
 
-footer {
+.footer {
   width: 100%;
-  min-height: 8.875rem;
+  min-height: 11.4vh;
   background: #353535;
   padding: 1.375rem 1.5625rem;
   color: white;
   text-decoration: none;
   display: flex;
   flex-direction: column;
+  line-height: 1.6875rem;
 }
 @media (min-width: 768px) {
-  footer {
+  .footer {
+    display: flex;
     flex-direction: row-reverse;
+    padding-top: 4rem;
+    gap: 2rem;
+  }
+  .footer .fe2 {
+    order: 1;
+  }
+  .footer .fe1 {
+    order: 2;
   }
 }
-footer h2 {
+.footer__logo {
   font-family: "Shrikhand", sans-serif;
   font-weight: 500;
   font-size: 1.125rem;
   padding-bottom: 0.6rem;
 }
-footer p {
+.footer__engage p {
   padding: 0.4rem;
   gap: 1rem;
+  font-size: 1rem;
+  line-height: 1.3125rem;
 }
-footer a {
+.footer__engage a {
   text-decoration: none;
   color: inherit;
 }
-footer i {
-  font-size: 1rem;
+.footer__engage i {
+  font-size: 0.8rem;
   margin-right: 0.6rem;
+}
+@media (min-width: 768px) {
+  .footer__slide {
+    -o-object-position: center;
+       object-position: center;
+    position: relative;
+    top: 2rem;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .footer__engage {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+  }
 }
 
 .banner {
   position: relative;
   overflow: hidden;
-  height: 60vh;
+  height: 40vh;
   -o-object-position: bottom;
      object-position: bottom;
-  height: 100%;
 }
 .banner .cover-img {
+  height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.contain {
+  max-width: 1055px;
+  margin: auto;
 }
 
 .resto__main {
@@ -377,17 +466,13 @@ footer i {
   flex-direction: column;
   align-items: center;
   position: relative;
-  margin-top: -2rem;
+  margin-top: -4rem;
   padding: 1rem;
   border-radius: 2rem 2rem 0 0;
   background-color: #F6F6F6;
   width: 100%;
   box-sizing: border-box;
-}
-@media (min-width: 670px) {
-  .resto__main {
-    padding: 0 13rem 0rem 13rem;
-  }
+  min-width: 371px;
 }
 .resto__main .title-restaurant {
   position: relative;
@@ -400,7 +485,7 @@ footer i {
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  gap: 20rem;
+  gap: 1rem;
 }
 .resto__title .btn-heart {
   height: 2rem;
@@ -420,17 +505,31 @@ footer i {
 .resto__title i {
   font-size: 2rem;
 }
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  90% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .resto__title .fa-solid {
   color: transparent;
-  background-image: linear-gradient(#9356dc, magenta);
+  background-image: linear-gradient(#9356dc, #FF79DA);
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
-  transition: all 500ms ease-in-out;
+  transition: all 600ms ease-in-out;
 }
 .resto__title:hover .fa-solid {
   opacity: 1;
-  transform: scale(1.08);
+  animation: bounce 500ms;
 }
 .resto__title .fa-regular {
   opacity: 1;
@@ -445,32 +544,33 @@ footer i {
   display: flex;
   flex-direction: column;
   position: relative;
+  align-items: center;
   bottom: 0;
   height: 50%;
-  border: 1px solid red;
   width: 100%;
-  gap: 1rem;
+  gap: 2.5rem;
 }
-.menu-resto__encart {
-  background-color: yellow;
-  border: 1px solid salmon;
+.menu-resto .headline {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-self: flex-start;
 }
-.menu-resto .title-plat {
+.menu-resto .headline .title-plat {
   width: 275px;
   height: 27px;
   text-transform: uppercase;
   position: relative;
   font-weight: 300;
-  margin-bottom: 1rem;
 }
-.menu-resto .title-plat::after {
-  content: "";
+.menu-resto .headline .underline {
   width: 3rem;
   height: 0.25rem;
   background-color: #99e2d0;
-  position: absolute;
+  position: relative;
   left: 0;
   bottom: 0;
+  margin-top: 0.5rem;
 }
 
 .menu-item {
@@ -506,7 +606,7 @@ footer i {
   padding: 1rem;
 }
 .menu-item__confirmation {
-  background-color: brown;
+  background-color: #99E2D0;
   display: flex;
   margin-right: -4rem;
   border-radius: 0 1rem 1rem 0;
@@ -538,4 +638,37 @@ footer i {
 }
 .menu-item:hover .menu-item__icon {
   transform: rotate(-180deg);
+}
+
+.pan-item {
+  max-width: 634px;
+  width: 100%;
+  height: 100%;
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.btn {
+  border: 1px #9747ff;
+  box-sizing: content-box;
+  background: var(--button-gradient, linear-gradient(360deg, #9356dc 0%, #ff79da 100%));
+  width: 11.02rem;
+  height: 1.5rem;
+  padding: 0.813rem 1.172rem;
+  border-radius: 2rem;
+  color: white;
+  transition: transform 400ms;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  /* text layout  */
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: 0em;
+  font-family: "Roboto" sans-serif;
+  margin-bottom: 2.5rem;
+}
+.btn:hover {
+  transform: scale(1.02);
+  opacity: 0.7;
 }/*# sourceMappingURL=style.css.map */
