--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -1,11 +1,17 @@
 .menu {
     display: flex;
     flex-direction: column;
-    
+
     background-color: $bg_lgrey;
     padding: 3.375rem 1.125rem 4.125rem 1.0625rem;
     gap: 1.125rem;
 
+    @media (min-width: 768px) {
+        padding: 3.375rem 10rem 4.125rem 10rem;
+        gap: 3.125rem;
+    }
+
+    @media screen {}
 
 
     h2 {
@@ -19,11 +25,14 @@
         flex-direction: column;
         gap: 1.125rem;
         width: 100%;
-min-width: 600px;
+        min-width: 270px;
+
+
         @media (min-width: 768px) {
             flex-direction: row;
-            
-            
+            gap: 6.25rem;
+
+
         }
 
 
@@ -59,6 +68,7 @@ min-width: 600px;
         text-decoration: none;
         color: inherit;
         background-color: #ffffff;
+        box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
 
         &__image {
             height: 70%;
@@ -86,22 +96,25 @@ min-width: 600px;
                 background-clip: text;
                 -webkit-background-clip: text;
                 opacity: 0;
-                transition: all 2s ease-in-out;
+                transition: all 600ms ease-in-out;
+                transform: scale(0);
             }
 
             &:hover .fa-solid {
                 opacity: 1;
-                transform: scale(1.09);
+                transform: scale(1.1);
+                rotate: 360deg;
             }
 
             .fa-regular {
                 opacity: 1;
-                transition: all 1s ease-in-out;
+                transition: all 500ms ease-in-out;
             }
 
             &:hover .fa-regular {
                 opacity: 0;
-                transform: scale(0.7);
+                transform: scale(1);
+                rotate: -360deg;
             }
 
         }
