--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -1,15 +1,21 @@
 .banner {
     position: relative;
     overflow: hidden;
-    height: 60vh;
+    height: 40vh;
     object-position: bottom;
-    height: 100%;
+
 
     // z-index: 1;
     .cover-img {
+        height: 100%;
         width: 100%;
         object-fit: cover;
     }
+}
+
+.contain {
+    max-width: 1055px;
+    margin: auto;
 }
 
 .resto__main {
@@ -18,7 +24,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    margin-top: -2rem;
+    margin-top: -4rem;
     //    top: -60px; 
     padding: 1rem;
     border-radius: 2rem 2rem 0 0;
@@ -26,18 +32,16 @@
 
     width: 100%;
     box-sizing: border-box;
+    min-width: 371px;
 
-    @media (min-width: 670px) {
 
-        padding: 0 13rem 0rem 13rem;
-    }
 
     & .title-restaurant {
 
         position: relative;
         font-family: "Shrikhand", "Cursive";
         width: 100%;
-        
+
     }
 
 
@@ -49,7 +53,7 @@
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    gap: 20rem;
+    gap: 1rem;
 
     .btn-heart {
         height: 2rem;
@@ -77,23 +81,39 @@
         font-size: 2rem;
     }
 
+    @keyframes bounce {
+        0% {
+            transform: scale(1);
+        }
 
-    & .fa-solid {
+        50% {
+            transform: scale(1.5);
+        }
+
+        90% {
+            transform: scale(0.9);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    .fa-solid {
         color: transparent;
-
         background-image: linear-gradient($primary_1, $secondary_2);
         background-clip: text;
         -webkit-background-clip: text;
         opacity: 0;
-        transition: all 500ms ease-in-out;
+        transition: all 600ms ease-in-out;
     }
 
     &:hover .fa-solid {
         opacity: 1;
-        transform: scale(1.08);
+        animation: bounce 500ms;
     }
 
-    & .fa-regular {
+    .fa-regular {
         opacity: 1;
         transition: all 400ms ease-in-out;
     }
@@ -107,49 +127,50 @@
 }
 
 
+
 .menu-resto {
     display: flex;
     flex-direction: column;
     position: relative;
+    align-items: center;
     bottom: 0;
     height: 50%;
-    border: 1px solid red;
+    // border: 1px solid red;
     width: 100%;
-    gap: 1rem;
+    gap: 2.5rem;
 
-    &__encart {
-        background-color: yellow;
-        border: 1px solid salmon;
-
-
-    }
-
-    .title-plat {
-
-        width: 275px;
-        height: 27px;
-        // flex-shrink: 0;
-        text-transform: uppercase;
+    .headline {
+        // border: #2100a6 1px solid;
+        display: flex;
+        flex-direction: column;
         position: relative;
+        align-self: flex-start;
 
-        font-weight: 300;
+        & .title-plat {
+            // border: 1px solid purple;
+            width: 275px;
+            height: 27px;
+            // flex-shrink: 0;
+            text-transform: uppercase;
+            position: relative;
+            font-weight: 300;
 
-        margin-bottom: 1rem;
+        }
 
-
-        &::after {
-            content: "";
+        & .underline {
+            // content: "";
             width: 3rem;
             height: .25rem;
             background-color: #99e2d0;
-            position: absolute;
+            position: relative;
             left: 0;
             bottom: 0;
+            margin-top: 0.5rem;
+
 
         }
+
     }
-
-
 }
 
 .menu-item {
@@ -162,6 +183,7 @@
     gap: 1rem;
     overflow: hidden;
     width: 100%;
+
 
 
     &__header {
@@ -194,8 +216,8 @@
     }
 
     &__confirmation {
-        // background-color: $tertiary_3;
-        background-color: brown;
+        background-color: $tertiary_3;
+        // background-color: brown;
         display: flex;
         margin-right: -4rem;
         border-radius: 0 1rem 1rem 0;
@@ -237,4 +259,42 @@
         transform: rotate(-180deg);
     }
 
+}
+
+.pan-item {
+    max-width: 634px ;
+    width: 100%;
+    height: 100%;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn {
+    border: 1px #9747ff;
+
+    box-sizing: content-box;
+    background: var(--button-gradient,
+            linear-gradient(360deg, #9356dc 0%, #ff79da 100%));
+    width: 11.02rem;
+    height: 1.5rem;
+    padding: 0.813rem 1.172rem;
+    border-radius: 2rem;
+    // margin-top: 1.688rem;
+    color: white;
+
+    transition: transform 400ms;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+    /* text layout  */
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    letter-spacing: 0em;
+    font-family: "Roboto" sans-serif;
+    margin-bottom: 2.5rem;
+
+    &:hover {
+        transform: scale(1.02);
+        opacity: 0.7;
+    }
 }
