--- a/assets/style.css
+++ b/assets/style.css
@@ -123,29 +123,24 @@ body {
 }
 
 header {
-  font-family: "Shrikhand", cursive;
-  text-align: center;
-  /* background-color:bisque; */
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 0.5rem 0rem;
-  position: relative;
-  height: 7.3vh;
-}
-header .logoHead {
-  margin: 0;
-}
-header .header_logo {
-  display: flex;
-  text-align: center;
-  position: absolute;
-}
-header .back-to-index {
-  position: absolute;
-  width: 2rem;
-  height: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  flex-direction: column;
+  font-family: "Shrikhand", cursive;
+  text-align: center;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 0.7rem 0rem;
+  height: 7.3vh;
+}
+header .back-to-index {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 2rem;
+  height: 2rem;
   top: 50%;
   left: 2rem;
   transform: translateY(-50%);
@@ -163,9 +158,10 @@ main .localisation {
   background-color: #f6f6f6;
   text-align: center;
   font-size: 0.7rem;
+  box-sizing: border-box;
 }
 main .localisation h2 {
-  font-family: "Roboto" sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #353535;
   font-weight: 500;
 }
@@ -175,30 +171,36 @@ main .localisation i {
 
 /* Section Information Reservation   */
 .reservation {
-  background-color: #f6f6f6;
-  border: 0.2px solid blueviolet;
-  text-align: center;
-  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   flex-direction: column;
+  min-height: 100%;
+  gap: 1rem;
+  padding: 2rem;
+  background-color: #EAEAEA;
+  text-align: center;
 }
-.reservation h2 {
+.reservation__title {
+  font-family: "Roboto", sans-serif;
+  color: #353535;
+  font-weight: 700;
   font-size: 1.5rem;
 }
-.reservation p {
-  font-size: 1rem;
+.reservation__description {
+  font-size: 1.01rem;
   font-weight: 300;
 }
-.reservation button {
+.reservation__button {
   border: 1px #9747ff;
   box-sizing: content-box;
-  background: var(--button-gradient, linear-gradient(175deg, #9356dc 0%, #ff79da 100%));
+  background: var(--button-gradient, linear-gradient(360deg, #9356dc 0%, #FF79DA 100%));
   width: 11.02rem;
   height: 1.5rem;
   padding: 0.813rem 1.172rem;
   border-radius: 2rem;
-  margin-top: 1.688rem;
-  color: white;
+  color: #ffffff;
   transition: transform 400ms;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   /* text layout  */
@@ -206,9 +208,9 @@ main .localisation i {
   font-weight: 500;
   line-height: 1.5rem;
   letter-spacing: 0em;
-  font-family: "Roboto" sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-.reservation button:hover {
+.reservation__button:hover {
   transform: scale(1.02);
   opacity: 0.7;
 }
@@ -222,7 +224,7 @@ main .localisation i {
 
 .function {
   display: flex;
-  align-content: center;
+  align-self: center;
   flex-direction: column;
   padding: 4rem 2rem;
   background-color: #fff;
@@ -268,8 +270,8 @@ main .localisation i {
   margin: 0;
   position: absolute;
   display: grid;
-  color: white;
-  background-color: #9356DC;
+  color: #ffffff;
+  background-color: #9356dc;
   width: 1.5rem;
   height: 1.5rem;
   flex-shrink: 0;
@@ -385,7 +387,7 @@ main .localisation i {
   min-height: 11.4vh;
   background: #353535;
   padding: 1.375rem 1.5625rem;
-  color: white;
+  color: #ffffff;
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -406,7 +408,7 @@ main .localisation i {
   }
 }
 .footer__logo {
-  font-family: "Shrikhand", sans-serif;
+  font-family: "Shrikhand", cursive;
   font-weight: 500;
   font-size: 1.125rem;
   padding-bottom: 0.6rem;
@@ -476,7 +478,7 @@ main .localisation i {
 }
 .resto__main .title-restaurant {
   position: relative;
-  font-family: "Shrikhand", "Cursive";
+  font-family: "Shrikhand", cursive;
   width: 100%;
 }
 
@@ -543,8 +545,8 @@ main .localisation i {
 .menu-resto {
   display: flex;
   flex-direction: column;
-  position: relative;
   align-items: center;
+  position: relative;
   bottom: 0;
   height: 50%;
   width: 100%;
@@ -566,7 +568,7 @@ main .localisation i {
 .menu-resto .headline .underline {
   width: 3rem;
   height: 0.25rem;
-  background-color: #99e2d0;
+  background-color: #99E2D0;
   position: relative;
   left: 0;
   bottom: 0;
@@ -577,7 +579,7 @@ main .localisation i {
   display: flex;
   flex-direction: row;
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 1.1rem;
   padding: 0rem 0rem 0rem 1rem;
   gap: 1rem;
@@ -592,11 +594,13 @@ main .localisation i {
   padding: 1rem;
 }
 .menu-item__description {
-  font-size: 1.1875rem;
+  font-size: 0.99rem;
+  font-weight: 300;
 }
 .menu-item__title {
   margin: 0;
-  font-size: 1.3125rem;
+  font-size: 1.125rem;
+  font-weight: 500;
 }
 .menu-item__price {
   font-weight: 700;
@@ -620,7 +624,7 @@ main .localisation i {
 .menu-item__icon-wrap {
   height: 1.6rem;
   width: 1.6rem;
-  background-color: white;
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -629,7 +633,7 @@ main .localisation i {
   transform: rotate(180deg);
 }
 .menu-item__icon {
-  color: #99e2d0;
+  color: #99E2D0;
   transition-duration: 700ms, 1s;
 }
 .menu-item:hover .menu-item__confirmation {
@@ -652,12 +656,12 @@ main .localisation i {
 .btn {
   border: 1px #9747ff;
   box-sizing: content-box;
-  background: var(--button-gradient, linear-gradient(360deg, #9356dc 0%, #ff79da 100%));
+  background: var(--button-gradient, linear-gradient(360deg, #9356dc 0%, #FF79DA 100%));
   width: 11.02rem;
   height: 1.5rem;
   padding: 0.813rem 1.172rem;
   border-radius: 2rem;
-  color: white;
+  color: #ffffff;
   transition: transform 400ms;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   /* text layout  */
@@ -665,8 +669,7 @@ main .localisation i {
   font-weight: 500;
   line-height: 1.5rem;
   letter-spacing: 0em;
-  font-family: "Roboto" sans-serif;
-  margin-bottom: 2.5rem;
+  font-family: "Roboto", sans-serif;
 }
 .btn:hover {
   transform: scale(1.02);
