--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,11 @@
+@import "../utils/mixin";
+
 .footer {
     width: 100%;
     min-height: 11.4vh;
     background: $bg_drkgrey;
     padding: 1.375rem 1.5625rem;
-    color: white;
+    color: $bg_white;
     text-decoration: none;
     display: flex;
     flex-direction: column;
@@ -26,7 +28,7 @@
     }
 
     &__logo {
-        font-family: "Shrikhand", sans-serif;
+        font-family: $Logofont;
         font-weight: 500;
         font-size: 1.125rem;
         padding-bottom: 0.6rem;
