--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,34 +1,21 @@
-header {
+@import "../utils/mixin";
 
-    font-family: "Shrikhand", cursive;
+header {
+    @include baseLayout;
+    flex-direction: column;
+    font-family: $Logofont;
     text-align: center;
-    /* background-color:bisque; */
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
-    padding: 0.5rem 0rem;
-    position: relative;
+    padding: 0.7rem 0rem;
     height: 7.30vh;
 
-    .logoHead {
-        margin: 0;
-    }
-
-    .header_logo {
-        display: flex;
-        text-align: center;
-        position: absolute;
-    }
-
     .back-to-index {
-        position: absolute;
+        @include baseLayout;
         width: 2rem;
         height: 2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         top: 50%;
         left: 2rem;
         transform: translateY(-50%);
         font-size: 1.2rem;
-
     }
 }
