--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -1,3 +1,5 @@
+@import "../utils/mixin";
+
 .menu {
     display: flex;
     flex-direction: column;
@@ -11,7 +13,6 @@
         gap: 3.125rem;
     }
 
-    @media screen {}
 
 
     h2 {
@@ -67,7 +68,7 @@
         min-width: 340px;
         text-decoration: none;
         color: inherit;
-        background-color: #ffffff;
+        background-color: $bg_white;
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
 
         &__image {
