--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -1,3 +1,5 @@
+@import "../utils/mixin";
+
 .banner {
     position: relative;
     overflow: hidden;
@@ -39,7 +41,7 @@
     & .title-restaurant {
 
         position: relative;
-        font-family: "Shrikhand", "Cursive";
+        font-family: $Logofont;
         width: 100%;
 
     }
@@ -129,10 +131,8 @@
 
 
 .menu-resto {
-    display: flex;
-    flex-direction: column;
+    @include resto-layout;
     position: relative;
-    align-items: center;
     bottom: 0;
     height: 50%;
     // border: 1px solid red;
@@ -141,8 +141,7 @@
 
     .headline {
         // border: #2100a6 1px solid;
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         position: relative;
         align-self: flex-start;
 
@@ -161,7 +160,7 @@
             // content: "";
             width: 3rem;
             height: .25rem;
-            background-color: #99e2d0;
+            background-color: $tertiary_3;
             position: relative;
             left: 0;
             bottom: 0;
@@ -177,7 +176,7 @@
     display: flex;
     flex-direction: row;
     box-shadow: .25rem .25rem 1rem rgba(0, 0, 0, .1);
-    background-color: white;
+    background-color: $bg_white;
     border-radius: 1.1rem;
     padding: 0rem 0rem 0rem 1rem;
     gap: 1rem;
@@ -197,12 +196,14 @@
     }
 
     &__description {
-        font-size: 1.1875rem;
+        font-size: 0.99rem;
+        font-weight: 300;
     }
 
     &__title {
         margin: 0;
-        font-size: 1.3125rem;
+        font-size: 1.125rem;
+        font-weight: 500;
     }
 
     &__price {
@@ -233,7 +234,7 @@
     &__icon-wrap {
         height: 1.6rem;
         width: 1.6rem;
-        background-color: white;
+        background-color: $bg_white;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -245,7 +246,7 @@
     }
 
     &__icon {
-        color: #99e2d0;
+        color: $tertiary_3;
         transition-duration: 700ms, 1s;
     }
 
@@ -262,7 +263,7 @@
 }
 
 .pan-item {
-    max-width: 634px ;
+    max-width: 634px;
     width: 100%;
     height: 100%;
     gap: 1rem;
@@ -271,30 +272,5 @@
 }
 
 .btn {
-    border: 1px #9747ff;
-
-    box-sizing: content-box;
-    background: var(--button-gradient,
-            linear-gradient(360deg, #9356dc 0%, #ff79da 100%));
-    width: 11.02rem;
-    height: 1.5rem;
-    padding: 0.813rem 1.172rem;
-    border-radius: 2rem;
-    // margin-top: 1.688rem;
-    color: white;
-
-    transition: transform 400ms;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-    /* text layout  */
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 1.5rem;
-    letter-spacing: 0em;
-    font-family: "Roboto" sans-serif;
-    margin-bottom: 2.5rem;
-
-    &:hover {
-        transform: scale(1.02);
-        opacity: 0.7;
-    }
+    @include button-style;
 }
