--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -1,3 +1,65 @@
-@mixin shadow{box-shadow: 5px 5px 21px -4px rgba(0,0,0,0.28);
-    -webkit-box-shadow: 5px 5px 21px -4px rgba(0,0,0,0.28);
-    -moz-box-shadow: 5px 5px 21px -4px rgba(0,0,0,0.28) };
+@mixin baseLayout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+@mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@mixin flex-center-column {
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+}
+
+@mixin flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+@mixin shadow {
+    box-shadow: 5px 5px 21px -4px rgba(0, 0, 0, 0.28);
+    -webkit-box-shadow: 5px 5px 21px -4px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 5px 5px 21px -4px rgba(0, 0, 0, 0.28)
+}
+
+@mixin resto-layout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+@mixin button-style {
+    border: 1px #9747ff;
+
+    box-sizing: content-box;
+    background: var(--button-gradient,
+            linear-gradient(360deg, $primary_1 0%, $secondary_2 100%));
+    width: 11.02rem;
+    height: 1.5rem;
+    padding: 0.813rem 1.172rem;
+    border-radius: 2rem;
+    // margin-top: 1.688rem;
+    color: $bg_white;
+
+    transition: transform 400ms;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+    /* text layout  */
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    letter-spacing: 0em;
+    font-family: $Mainfont;
+
+
+    &:hover {
+        transform: scale(1.02);
+        opacity: 0.7;
+    }
+}
