--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@
 @import'./sass/components/loader';
 @import './sass/base';
 @import './sass/utils/colors';
+@import'./sass/utils/fonts';
+
 @import './sass/layout/header';
 
 /* nav bar */
