--- a/assets/style.css
+++ b/assets/style.css
@@ -364,7 +364,7 @@ main .localisation i {
 .menu .card__content:hover .fa-solid {
   opacity: 1;
   transform: scale(1.1);
-  rotate: 360deg;
+  transform: rotate(360deg);
 }
 .menu .card__content .fa-regular {
   opacity: 1;
@@ -373,7 +373,7 @@ main .localisation i {
 .menu .card__content:hover .fa-regular {
   opacity: 0;
   transform: scale(1);
-  rotate: -360deg;
+  transform: rotate(-360deg);
 }
 .menu .card i {
   position: absolute;
