localisation input created

--- a/assets/style.css
+++ b/assets/style.css
@@ -145,7 +145,8 @@ header .back-to-index {
 }
 
 /* nav bar */
-main .localisation {
+.localisation {
+  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -156,14 +157,27 @@ main .localisation {
   text-align: center;
   font-size: 0.7rem;
   box-sizing: border-box;
+  position: relative;
 }
-main .localisation h2 {
+.localisation input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   font-family: "Roboto", sans-serif;
   color: #353535;
   font-weight: 500;
+  background: transparent;
+  border: none;
+  outline: none;
+  height: auto;
+  font-size: 2 rem;
+  padding-right: 2rem;
 }
-main .localisation i {
+.localisation i {
+  position: relative;
   font-size: 1.01rem;
+  left: 2rem;
 }
 
 /* Section Information Reservation   */
