--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -1,6 +1,10 @@
 @import "../utils/mixin";
 
 .menu {
+
+    @include minwith;
+    
+    width: 100%;
     display: flex;
     flex-direction: column;
 
