--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -21,7 +21,7 @@
     button {
         animation: slideInFromLeft 1.6s ease-out;
         animation-fill-mode: both;
-        visibility: hidden; 
+        visibility: hidden;
     }
 }
 
@@ -31,14 +31,15 @@
 
 .menu-resto {
     .delay-item1 {
-        animation-delay: 1.2s;
+        animation-delay: 0.6s;
     }
+
     .delay-item2 {
-        animation-delay: 1.5s;
+        animation-delay: 1s;
     }
 
     .delay-item3 {
-        animation-delay: 1.5s;  
+        animation-delay: 1.3s;
     }
 
     .menu-item {
@@ -77,6 +78,7 @@
         height: 100%;
         width: 100%;
         object-fit: cover;
+        @include minwith;
     }
 }
 
@@ -99,7 +101,7 @@
 
     width: 100%;
     box-sizing: border-box;
-    min-width: 371px;
+    @include minwith;
 
 
 
@@ -199,6 +201,7 @@
 
 
 .menu-resto {
+    
     @include resto-layout;
     position: relative;
     bottom: 0;
@@ -340,4 +343,5 @@
 
 .btn {
     @include button-style;
+    margin-bottom: 2em;
 }
