--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -49,7 +49,7 @@
     height: 1.5rem;
     padding: 0.813rem 1.172rem;
     border-radius: 2rem;
-    // margin-top: 1.688rem;
+   
     color: $bg_white;
 
     transition: transform 400ms;
@@ -60,12 +60,15 @@
     line-height: 1.5rem;
     letter-spacing: 0em;
     font-family: $Mainfont;
+    opacity: 1;
 
 
-    &:hover {
-        transform: scale(1.02);
-        opacity: 0.7;
-    }
+        &:hover {
+            opacity: 0.4; 
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            transform: scale(1.5); 
+        }
+    
 }
 
 @mixin text-overflow-ellipsis {
